generated_parser/MiniCParser.py
# Generated from MiniC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniCParser ( Parser ):

    grammarFileName = "MiniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'char'", "'bool'", "'if'", "'else'", 
                     "'while'", "'for'", "'return'", "'true'", "'false'", 
                     "'switch'", "'case'", "'default'", "'break'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "';'", "','", "':'", "'='", "'>'", "'<'", 
                     "'>='", "'<='", "'=='", "'!='", "'&&'", "'||'", "'!'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "INT", "CHAR", "BOOL", "IF", "ELSE", 
                      "WHILE", "FOR", "RETURN", "TRUE", "FALSE", "SWITCH", 
                      "CASE", "DEFAULT", "BREAK", "ID", "NUMBER", "CHAR_LITERAL", 
                      "STRING_LITERAL", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
                      "SEMICOLON", "COMMA", "COLON", "ASSIGN", "GT", "LT", 
                      "GE", "LE", "EQ", "NE", "AND", "OR", "NOT", "PLUS", 
                      "MINUS", "TIMES", "DIVIDE", "MODULO", "WS", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_functionDefinition = 2
    RULE_typeSpecifier = 3
    RULE_parameters = 4
    RULE_parameter = 5
    RULE_blockContent = 6
    RULE_breakStatement = 7
    RULE_statement = 8
    RULE_variableDeclaration = 9
    RULE_ifStatement = 10
    RULE_whileStatement = 11
    RULE_forStatement = 12
    RULE_forInitializer = 13
    RULE_returnStatement = 14
    RULE_switchStatement = 15
    RULE_caseStatement = 16
    RULE_defaultStatement = 17
    RULE_expression = 18
    RULE_assignmentExpression = 19
    RULE_logicalOrExpression = 20
    RULE_logicalAndExpression = 21
    RULE_equalityExpression = 22
    RULE_relationalExpression = 23
    RULE_additiveExpression = 24
    RULE_multiplicativeExpression = 25
    RULE_unaryExpression = 26
    RULE_primaryExpression = 27
    RULE_functionCall = 28
    RULE_argumentList = 29
    RULE_literal = 30

    ruleNames =  [ "program", "declaration", "functionDefinition", "typeSpecifier", 
                   "parameters", "parameter", "blockContent", "breakStatement", 
                   "statement", "variableDeclaration", "ifStatement", "whileStatement", 
                   "forStatement", "forInitializer", "returnStatement", 
                   "switchStatement", "caseStatement", "defaultStatement", 
                   "expression", "assignmentExpression", "logicalOrExpression", 
                   "logicalAndExpression", "equalityExpression", "relationalExpression", 
                   "additiveExpression", "multiplicativeExpression", "unaryExpression", 
                   "primaryExpression", "functionCall", "argumentList", 
                   "literal" ]

    EOF = Token.EOF
    INT=1
    CHAR=2
    BOOL=3
    IF=4
    ELSE=5
    WHILE=6
    FOR=7
    RETURN=8
    TRUE=9
    FALSE=10
    SWITCH=11
    CASE=12
    DEFAULT=13
    BREAK=14
    ID=15
    NUMBER=16
    CHAR_LITERAL=17
    STRING_LITERAL=18
    LPAREN=19
    RPAREN=20
    LBRACE=21
    RBRACE=22
    SEMICOLON=23
    COMMA=24
    COLON=25
    ASSIGN=26
    GT=27
    LT=28
    GE=29
    LE=30
    EQ=31
    NE=32
    AND=33
    OR=34
    NOT=35
    PLUS=36
    MINUS=37
    TIMES=38
    DIVIDE=39
    MODULO=40
    WS=41
    LINE_COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniCParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MiniCParser.DeclarationContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 62
                self.declaration()
                self.state = 65 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                    break

            self.state = 67
            self.match(MiniCParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDefinition(self):
            return self.getTypedRuleContext(MiniCParser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = MiniCParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.functionDefinition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(MiniCParser.TypeSpecifierContext,0)


        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def LPAREN(self):
            return self.getToken(MiniCParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniCParser.RPAREN, 0)

        def LBRACE(self):
            return self.getToken(MiniCParser.LBRACE, 0)

        def blockContent(self):
            return self.getTypedRuleContext(MiniCParser.BlockContentContext,0)


        def RBRACE(self):
            return self.getToken(MiniCParser.RBRACE, 0)

        def parameters(self):
            return self.getTypedRuleContext(MiniCParser.ParametersContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = MiniCParser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.typeSpecifier()
            self.state = 72
            self.match(MiniCParser.ID)
            self.state = 73
            self.match(MiniCParser.LPAREN)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0):
                self.state = 74
                self.parameters()


            self.state = 77
            self.match(MiniCParser.RPAREN)
            self.state = 78
            self.match(MiniCParser.LBRACE)
            self.state = 79
            self.blockContent()
            self.state = 80
            self.match(MiniCParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MiniCParser.INT, 0)

        def CHAR(self):
            return self.getToken(MiniCParser.CHAR, 0)

        def BOOL(self):
            return self.getToken(MiniCParser.BOOL, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_typeSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypeSpecifier" ):
                listener.enterTypeSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypeSpecifier" ):
                listener.exitTypeSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeSpecifier" ):
                return visitor.visitTypeSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def typeSpecifier(self):

        localctx = MiniCParser.TypeSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 14) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ParameterContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.COMMA)
            else:
                return self.getToken(MiniCParser.COMMA, i)

        def getRuleIndex(self):
            return MiniCParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = MiniCParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.parameter()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 85
                self.match(MiniCParser.COMMA)
                self.state = 86
                self.parameter()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(MiniCParser.TypeSpecifierContext,0)


        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = MiniCParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.typeSpecifier()
            self.state = 93
            self.match(MiniCParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StatementContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_blockContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockContent" ):
                listener.enterBlockContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockContent" ):
                listener.exitBlockContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockContent" ):
                return visitor.visitBlockContent(self)
            else:
                return visitor.visitChildren(self)




    def blockContent(self):

        localctx = MiniCParser.BlockContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_blockContent)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 240521301982) != 0):
                self.state = 95
                self.statement()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(MiniCParser.BREAK, 0)

        def SEMICOLON(self):
            return self.getToken(MiniCParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_breakStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStatement" ):
                listener.enterBreakStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStatement" ):
                listener.exitBreakStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStatement" ):
                return visitor.visitBreakStatement(self)
            else:
                return visitor.visitChildren(self)




    def breakStatement(self):

        localctx = MiniCParser.BreakStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_breakStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(MiniCParser.BREAK)
            self.state = 102
            self.match(MiniCParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(MiniCParser.VariableDeclarationContext,0)


        def SEMICOLON(self):
            return self.getToken(MiniCParser.SEMICOLON, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniCParser.ExpressionContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MiniCParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(MiniCParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(MiniCParser.ForStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(MiniCParser.ReturnStatementContext,0)


        def LBRACE(self):
            return self.getToken(MiniCParser.LBRACE, 0)

        def blockContent(self):
            return self.getTypedRuleContext(MiniCParser.BlockContentContext,0)


        def RBRACE(self):
            return self.getToken(MiniCParser.RBRACE, 0)

        def switchStatement(self):
            return self.getTypedRuleContext(MiniCParser.SwitchStatementContext,0)


        def BREAK(self):
            return self.getToken(MiniCParser.BREAK, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = MiniCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statement)
        try:
            self.state = 123
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2, 3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.variableDeclaration()
                self.state = 105
                self.match(MiniCParser.SEMICOLON)
                pass
            elif token in [9, 10, 15, 16, 17, 18, 19, 35, 36, 37]:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.expression()
                self.state = 108
                self.match(MiniCParser.SEMICOLON)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.ifStatement()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.whileStatement()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.forStatement()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.returnStatement()
                self.state = 114
                self.match(MiniCParser.SEMICOLON)
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 7)
                self.state = 116
                self.match(MiniCParser.LBRACE)
                self.state = 117
                self.blockContent()
                self.state = 118
                self.match(MiniCParser.RBRACE)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 8)
                self.state = 120
                self.switchStatement()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 9)
                self.state = 121
                self.match(MiniCParser.BREAK)
                self.state = 122
                self.match(MiniCParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeSpecifier(self):
            return self.getTypedRuleContext(MiniCParser.TypeSpecifierContext,0)


        def ID(self):
            return self.getToken(MiniCParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(MiniCParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = MiniCParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.typeSpecifier()
            self.state = 126
            self.match(MiniCParser.ID)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==26:
                self.state = 127
                self.match(MiniCParser.ASSIGN)
                self.state = 128
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(MiniCParser.IF, 0)

        def LPAREN(self):
            return self.getToken(MiniCParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniCParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniCParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(MiniCParser.ELSE, 0)

        def getRuleIndex(self):
            return MiniCParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = MiniCParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_ifStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MiniCParser.IF)
            self.state = 132
            self.match(MiniCParser.LPAREN)
            self.state = 133
            self.expression()
            self.state = 134
            self.match(MiniCParser.RPAREN)
            self.state = 135
            self.statement()
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 136
                self.match(MiniCParser.ELSE)
                self.state = 137
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(MiniCParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(MiniCParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(MiniCParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(MiniCParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniCParser.StatementContext,0)


        def getRuleIndex(self):
            return MiniCParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = MiniCParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(MiniCParser.WHILE)
            self.state = 141
            self.match(MiniCParser.LPAREN)
            self.state = 142
            self.expression()
            self.state = 143
            self.match(MiniCParser.RPAREN)
            self.state = 144
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(MiniCParser.FOR, 0)

        def LPAREN(self):
            return self.getToken(MiniCParser.LPAREN, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(MiniCParser.SEMICOLON)
            else:
                return self.getToken(MiniCParser.SEMICOLON, i)

        def RPAREN(self):
            return self.getToken(MiniCParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(MiniCParser.StatementContext,0)


        def forInitializer(self):
            return self.getTypedRuleContext(MiniCParser.ForInitializerContext,0)


        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniCParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniCParser.ExpressionContext,i)


        def getRuleIndex(self):
            return MiniCParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = MiniCParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_forStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(MiniCParser.FOR)
            self.state = 147
            self.match(MiniCParser.LPAREN)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 240519185934) != 0):
                self.state = 148
                self.forInitializer()

